--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rahul3103/react-scientific-calculator"
+  },
   "babel": {
     "presets": [
       "@babel/preset-env",
